Writing through news summaries...

--- a/2025/2025-06-08-wir.md
+++ b/2025/2025-06-08-wir.md
@@ -1,8 +1,5 @@
-# tktk
-## tktk
-
-![Person in Guy Fawkes mask reading a newspaper that's on fire](https://w3w.news/img/fawkes-neves-1920.jpg)
-*Photo by Victória Neves via Unsplash.*
+# Why don't news orgs do that?
+## K Wave's move to launch a bitcoin treasury is worth watching in the broader media space. Yes, even among companies that don't produce pulpy K-dramas.
 
 <hr>
 
@@ -14,27 +11,12 @@
 
 <hr>
 
-**Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
 
-Riff on WSJ story about crypto's pro-MAGA swing as an anti-libertarian development.
+The great Clayton Christensen
 
-Draft summary by Leo/Llama 3.1 8B:
+Shares in K Wave Media, a Nasdaq-listed Korean entertainment company, soared after it announced plans to build a corporate bitcoin treasury. Hmmmm. ()
 
-Bitcoin's close ties to the Trump administration are causing discomfort among some factions of the crypto world, as the industry seeks to gain mainstream acceptance. The industry's flagship event, the Bitcoin Conference, has become a platform for Trump officials and allies to promote their favored policies, with some critics warning that the government's increasing involvement could create conflicts of interest and jeopardize the industry's legitimacy. ([Wall Street Journal](https://www.wsj.com/finance/currencies/bitcoin-goes-all-in-on-maga-shedding-its-antigovernment-slant-2f1bb3d0?st=p5MmW7&reflink=desktopwebshare_permalink))  
-
-Wrap in mention of Trump-Musk blowup as well. CNBC coverage of the melodrama: https://www.cnbc.com/2025/06/05/trump-musk-crazy-government-contracts.html
-
-Luckily, Kanye is trying to [mediate the whole thing](https://www.salon.com/2025/06/05/please-noooooo-ye-implores-trump-musk-to-reconcile/), it seems. That should help.
-
-The 10-year anniversary of Trump's entry into presidential politics is approaching on June 16. https://money.cnn.com/2016/06/16/media/trump-announcement-one-year-later/index.html
-
-**Trump Media filed a proposal** with U.S. regulators to offer [an exchange-traded bitcoin fund](https://finance.yahoo.com/news/donald-trumps-truth-social-officially-files-for-bitcoin-etf-as-company-deepens-crypto-push-150426350.html). Fees from the listing would add to the U.S. president's personal profits from crypto since taking office -- a trend that has drawn ethics complaints from critics in Congress and beyond. President Trump's haul has already topped $1 billion
-
-
-
-company Truth Social is looking to launch a bitcoin ETF. https://www.cnbc.com/video/2025/06/04/trumps-truth-social-continues-crypto-push-with-step-toward-bitcoin-etf-launch-cnbc-crypto-world.html | https://finance.yahoo.com/news/donald-trumps-truth-social-officially-files-for-bitcoin-etf-as-company-deepens-crypto-push-150426350.html | He's already made over 1B on crypto: https://www.forbes.com/sites/danalexander/2025/06/05/this-is-how-much-trump-has-made-from-crypto-so-far/ | https://www.theblock.co/post/357210/world-liberty-sends-cease-and-desist-letter-to-firms-building-unaffiliated-trump-branded-wallet-report
-
-
+K Wave Media, a Korean entertainment firm listed on the NASDAQ, has seen its stock soar 143% after announcing plans to allocate a significant portion of its $500 million raise towards building a Bitcoin treasury and investing in related initiatives.* The company aims to leverage Bitcoin as a store of value and a foundation for innovation, joining a growing number of companies imitating a Bitcoin-focused corporate strategy. ([Decrypt](https://decrypt.co/323671/k-pop-firms-stock-soars-115-after-bitcoin-purchase-plans)) | **K-Pop Media Firm K Wave Sees Stock Surge After Announcing Bitcoin Acquisition Strategy** K Wave Media, a Nasdaq-listed K-Pop media holding company, has seen its stock surge 132.39% after announcing plans to sell $500 million worth of shares to finance its Bitcoin purchases and other corporate operations. The move follows a growing trend of firms holding Bitcoin as a strategic reserve asset, with K Wave claiming to be among the first publicly traded media companies to integrate BTC directly into its core treasury operations. https://www.theblock.co/post/357032/nasdaq-listed-k-pop-media-firm-k-wave-stock-rallies-130-after-announcing-bitcoin-acquisition-strategy ([]())
 
  <hr>
 
@@ -47,19 +29,19 @@ company Truth Social is looking to launch a bitcoin ETF. https://www.cnbc.com/vi
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Reddit has filed a lawsuit against AI company Anthropic, alleging that it continued to access and use the online forum's data without permission, despite claiming to have stopped. The complaint claims that Anthropic's actions were unauthorized and violated Reddit's user data policy, and that the company used the data for commercial purposes without paying for it. ([Wall Street Journal](https://www.wsj.com/tech/ai/reddit-lawsuit-anthropic-ai-3b9624dd?st=YhJVhU&reflink=desktopwebshare_permalink)) <!-- Draft by Leo/Llama 3.1 8B -->
+- **Big Tech cut new deals to secure nuclear power** for their AI data centers in the U.S. Meta [signed a 20-year agreement](https://www.cnbc.com/2025/06/03/meta-signs-nuclear-power-deal-with-constellation-energy-.html) to buy nuclear power from Constellation Energy, and Amazon said it will spend $10 billion to build new facilities [in North Carolina](https://decrypt.co/323815/amazon-10-billion-north-carolina-data-centers-ai-expansion). MIT Technology Review also recently noted there is a data center boom underway [in Reno, Nevada](https://www.technologyreview.com/2025/05/20/1116287/ai-data-centers-nevada-water-reno-computing-environmental-impact/), including new projects for Microsoft, Apple, and Google.
 
-- Meta makes investment in nuclear data centers by Contellation. <!-- Link TK --> | https://decrypt.co/323815/amazon-10-billion-north-carolina-data-centers-ai-expansion | A data center boom is underway in the desert east of Reno, Nevada, with major tech companies like Google, Microsoft, and Apple building massive facilities to support their artificial intelligence and cloud computing needs. This surge in construction has raised concerns about the energy demands and carbon costs of the AI revolution, which is the focus of MIT Technology Review's new series, "Power Hungry." ([MIT Technology Review](https://www.technologyreview.com/2025/05/22/1117300/the-download-the-desert-data-center-boom-and-how-to-measure-earths-elevations/)) <!-- Draft by Leo/Llama 3.1 8B -->
+- **Reddit filed a lawsuit against Anthropic,** alleging it continued to access and use Reddit data without permission despite claiming to have stopped. The site could set an important precedent for other social platforms and news sites. ([Wall Street Journal](https://www.wsj.com/tech/ai/reddit-lawsuit-anthropic-ai-3b9624dd?st=YhJVhU&reflink=desktopwebshare_permalink))
 
-- The Ethereum Foundation plans to take a more deliberate approach to spending its substantial ETH reserves, aiming to support the ecosystem during downturns or pivotal moments, as part of a broader shift to double down on Ethereum's role as the leading platform for decentralized applications. https://www.theblock.co/post/357066/ethereum-foundation-expects-2025-26-to-be-pivotal-for-the-ecosystem-as-it-reforms-its-treasury-management ([]())
+- **Crypto scored some big wins on Wall Street:** Stablecoin issuer Circle [raised over $1 billion](https://www.wsj.com/finance/stocks/crypto-firm-circle-set-to-make-stock-market-debut-cb804241?st=vTzrwQ&reflink=desktopwebshare_permalink) in its initial public offering at the New York Stock Exchange... JPMorgan is reportedly planning to [expand crypto services](https://www.theblock.co/post/356998/jpmorgan-to-offer-crypto-etf-financing-considers-letting-clients-use-crypto-as-loan-collateral-report) for its wealth-management clients... U.S.-listed ether funds are [on a 15-day winning streak](https://www.theblock.co/post/357372/15-day-streak-brings-ethereum-etfs-to-record-high-cumulative-inflow-value) in terms of attracting net inflows of investor money.
 
-- **Crypto scored some big wins on Wall Street:** Circle IPO Thursday. WSJ coverage: https://www.wsj.com/finance/stocks/crypto-firm-circle-set-to-make-stock-market-debut-cb804241?st=vTzrwQ&reflink=desktopwebshare_permalink | Arca CIO pissed at small allocation: https://www.theblock.co/post/357218/arca-cio-jeff-dorman-slams-measly-crcl-allocation-from-stablecoin-issuers-oversubscribed-ipo <!-- Other details: Following story covers wednesday night pricing - https://decrypt.co/323795/stablecoin-giant-circle-raises-1-billion-ipo-nyse-debut | Trading halt: https://decrypt.co/323854/usdc-issuer-circle-halted-nyse-debut-crcl-triples-ipo-price --> | Bloomberg: BlackRock BTC ETF had record inflows in May. <!-- Link TK --> | JPMorgan is expanding its crypto services, allowing wealth-management clients to use cryptocurrency assets as loan collateral for certain ETFs, including BlackRock's iShares Bitcoin Trust, and counting crypto holdings toward their net worth and liquid assets when determining borrowing limits. This move marks another step in the bank's growing involvement in the crypto industry, following its decision to allow customers to buy bitcoin earlier this year. https://www.theblock.co/post/356998/jpmorgan-to-offer-crypto-etf-financing-considers-letting-clients-use-crypto-as-loan-collateral-report ([]())
+- **Trump Media filed a proposal** with U.S. regulators to offer [an exchange-traded bitcoin fund](https://finance.yahoo.com/news/donald-trumps-truth-social-officially-files-for-bitcoin-etf-as-company-deepens-crypto-push-150426350.html). Fees from the listing would undoubtedly add to the U.S. president's personal profits from crypto since Election Day -- a figure that has already [topped $1 billion](https://www.forbes.com/sites/danalexander/2025/06/05/this-is-how-much-trump-has-made-from-crypto-so-far/) according to Forbes. The venerable business mag says Trump’s crypto holdings are now worth more than any single real estate asset in his portfolio, and even more than the combined value of Mar-a-Lago and Trump Tower.
 
-- *K Wave Media, a Korean entertainment firm listed on the NASDAQ, has seen its stock soar 143% after announcing plans to allocate a significant portion of its $500 million raise towards building a Bitcoin treasury and investing in related initiatives.* The company aims to leverage Bitcoin as a store of value and a foundation for innovation, joining a growing number of companies imitating a Bitcoin-focused corporate strategy. ([Decrypt](https://decrypt.co/323671/k-pop-firms-stock-soars-115-after-bitcoin-purchase-plans)) | **K-Pop Media Firm K Wave Sees Stock Surge After Announcing Bitcoin Acquisition Strategy** K Wave Media, a Nasdaq-listed K-Pop media holding company, has seen its stock surge 132.39% after announcing plans to sell $500 million worth of shares to finance its Bitcoin purchases and other corporate operations. The move follows a growing trend of firms holding Bitcoin as a strategic reserve asset, with K Wave claiming to be among the first publicly traded media companies to integrate BTC directly into its core treasury operations. https://www.theblock.co/post/357032/nasdaq-listed-k-pop-media-firm-k-wave-stock-rallies-130-after-announcing-bitcoin-acquisition-strategy ([]())
+- **The Ethereum Foundation said** it will take a more deliberate approach to spending its substantial ether reserves to boost the network as the leading platform for decentralized applications. ([The Block](https://www.theblock.co/post/357066/ethereum-foundation-expects-2025-26-to-be-pivotal-for-the-ecosystem-as-it-reforms-its-treasury-management))
+
+
 
 ### Market Snapshot
-
-<!-- Preliminary formatting, data in the table below for now. Update after Friday's close in NY... -->
 
 *A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, including additional indexes and asset classes, see my spreadsheet [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
 
@@ -116,38 +98,34 @@ company Truth Social is looking to launch a bitcoin ETF. https://www.cnbc.com/vi
 
 
 
-
-
-
-
-
 ### Looking Ahead
 
-- Bloomberg: Lummis says Genius Act will pass next week, won't allow interest-bearing stablecoin accounts due to political trade-offs. <!-- Link TK --> | Separate bill to protect devs: https://www.theblock.co/post/357182/crypto-groups-push-to-add-a-bill-that-aims-to-protect-software-developers-in-overarching-legislation
+- **Sen. Cynthia Lummis (R-Wyo.)** said in an [interview with Bloomberg News](https://www.youtube.com/watch?v=iEHfVY3S9F4&t=91s) on Tuesday she expects a bill setting clearer rules for stablecoins in the U.S. will pass the Senate this week and head to the House. Politico's Jasper Goodman reports Lummis is [coordinating with](https://www.politico.com/live-updates/2025/06/03/congress/senate-crypto-stablecoins-legislation-market-republicans-00383565) Sen. Kirsten Gillibrand (D-N.Y.) in an effort to secure some level of bipartisan support that would smooth the bill's passage into law. Lummis says that will likely preclude allowing interest-bearing stablecoin accounts in the Senate bill.
 
-- **Uh-oh.** https://slate.com/technology/2025/06/crypto-news-wrench-attacks-nyc-kidnapping-crime-rise.html | ABC News reports that "wrench attacks" against wealthy crypto investors are [on the rise](https://abcnews.go.com/US/wireStory/wrench-attacks-wealthy-crypto-holders-rise-122270144). One high-profile example: A recent [kidnapping and torture case](https://nypost.com/2025/05/23/us-news/kentucky-crypto-investor-allegedly-tortured-captive-italian-tourist-for-weeks-in-luxury-nyc-apartment-sources/) in New York's posh SoHo neighborhood. <!-- Draft by PM --> | - **French authorities have made a breakthrough in the recent string of crypto-related kidnappings, arresting a 24-year-old French-Moroccan national suspected of being the mastermind behind the schemes.** The individual, Badiss Mohamed Amide Bajjou, is wanted by Interpol for organized extortion and kidnapping, and his arrest is seen as a result of excellent judicial cooperation between France and Morocco. https://decrypt.co/323693/police-arrest-alleged-amstermind-french-crypto-kidnappings-report ([]()) <!-- Draft by Leo/Llama 3.1 8B -->
-
-- Prof G/Pat McGee on iPhone in the U.S.
+- **Brutal, low-tech "wrench attacks"** against wealthy crypto investors appear to be on the rise globally, including recent arrests in high-profile cases in [New York](https://abcnews.go.com/US/wireStory/wrench-attacks-wealthy-crypto-holders-rise-122270144) and [Morocco](https://decrypt.co/323693/police-arrest-alleged-amstermind-french-crypto-kidnappings-report). Slate's Nitish Pahwa [reports](https://slate.com/technology/2025/06/crypto-news-wrench-attacks-nyc-kidnapping-crime-rise.html) that the problem even warranted a panel presentation at the recent Bitcoin Las Vegas conference. Yikes.
 
 ### Odds & Ends
 
-**Farewell, WTF.** Comedian Marc Maron announced on [Monday's episode](https://www.wtfpod.com/podcast/episode-1648-john-mulaney) of his podcast WTF that he and producer Brendan McDonald will end the 16-year project this fall.
+![Marc Maron interviewing President Obama for his podcast in June 2015](https://w3w.news/img/marc-maron-obama.jpg)
+*Marc Maron interviewing President Obama for his podcast in June 2015. White House photo by Pete Souza*
 
-In Salon's coverage of the announcement, senior cultural critic Melanie McFarland accurately [captured](https://www.salon.com/2025/06/04/marc-marons-heart-made-wtf-a-hit-in-the-joe-rogan-age-its-all-about-shallow-brawn/) Maron's significance as a pioneer for podcasting. He was undeniably an early adopter of the technology, of course. And in June 2015, he became the first podcaster to [interview a sitting president](https://www.wtfpod.com/podcast/episodes/episode_613_-_president_barack_obama), a colossal milestone for the medium itself.  
+**Comedian Marc Maron** announced on [Monday's episode](https://www.wtfpod.com/podcast/episode-1648-john-mulaney) of his podcast WTF that he and producer Brendan McDonald will end the 16-year project this fall.
 
-McFarland also notes how the warmth and humanity Maron has consistently brought to WTF throughout its run have proved to be a sad exception as podcasting has exploded in popularity over the years:
+In Salon's coverage of the announcement, senior cultural critic Melanie McFarland accurately [captured](https://www.salon.com/2025/06/04/marc-marons-heart-made-wtf-a-hit-in-the-joe-rogan-age-its-all-about-shallow-brawn/) Maron's historical significance as a podcasting pioneer. Maron was undeniably an early adopter of the technology, of course. And in June 2015, he became the first podcaster to [interview a sitting president](https://www.wtfpod.com/podcast/episodes/episode_613_-_president_barack_obama), a colossal milestone for the medium itself.  
+
+McFarland also notes how the warmth and humanity Maron has consistently brought to WTF throughout its run have proved to be a sad exception as podcasting has exploded in popularity over the years. She writes:
 
 >*Maron’s production output has been daunting since the earliest days of “WTF,” churning out two episodes a week to build an archive surpassing 1,600 installments. (Monday’s episode is No. 1,648.) All these years later, and with a constellation’s worth of additional competition, it’s still one of the most downloaded and streamed podcasts going.*
 >
 >*But it’s also a small island in a medium overrun by shallow rage theater celebrating thoughtlessness. Within that swirl, “WTF” stands out as an oasis of introspection thanks to Maron presenting his show as an open cavern of feeling, constantly exposing new corners of insight and inviting listeners inside to revel in those discoveries.*
 
-At this point, Maron has well earned a break, which he says he sorely needs from the production grind. But I do hope *someone* keeps making media like WTF on the internet, stuff that's kind and thoughtful and not so "twitchy," to borrow a favorite phrase of my old newspaper colleague Kara Swisher, now a hugely popular podcaster herself.
+At this point, Maron has well earned a break, which he says he sorely needs from the production grind. But I do hope *someone* keeps making media like WTF on the internet. Stuff that's kind and thoughtful and not so "twitchy," to borrow a favorite phrase of my old newspaper colleague Kara Swisher, now a hugely popular [podcaster](https://podcasts.voxmedia.com/show/pivot) in her own right.
 
-To the extent we're all content creators on social networks these days, maybe each of us could even take on a small piece of the task from here, everyday, one post at a time.
+To the extent we're all content creators on social networks these days, maybe each of us could even take on a small piece of the task from here. Make the internet just a little bit kinder as a place everyday, one post at a time.
 
 Boomer lives!
 
-_**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
+_**Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
 _**If you need to reach me directly, please email peter[at]w3w[dot]media.**_
 
