re-working lead item

--- a/2025/2025-06-08-wir.md
+++ b/2025/2025-06-08-wir.md
@@ -1,5 +1,5 @@
-# Why don't news orgs do that?
-## K Wave's move to launch a bitcoin treasury is worth watching in the broader media space. Yes, even among companies that don't produce pulpy K-dramas.
+# TKTK
+## TKTTK
 
 <hr>
 
@@ -11,19 +11,32 @@
 
 <hr>
 
+![Marc Maron interviewing President Obama for his podcast in June 2015](https://w3w.news/img/marc-maron-obama.jpg)
+*Marc Maron interviewing President Obama for his podcast in June 2015. White House photo by Pete Souza*
 
-The great Clayton Christensen
+**Comedian Marc Maron** announced on [Monday's episode](https://www.wtfpod.com/podcast/episode-1648-john-mulaney) of his podcast WTF that he and producer Brendan McDonald will end the 16-year project this fall.
 
-Shares in K Wave Media, a Nasdaq-listed Korean entertainment company, soared after it announced plans to build a corporate bitcoin treasury. Hmmmm. ()
+In Salon's coverage of the announcement, senior cultural critic Melanie McFarland accurately [captured](https://www.salon.com/2025/06/04/marc-marons-heart-made-wtf-a-hit-in-the-joe-rogan-age-its-all-about-shallow-brawn/) Maron's historical significance as a podcasting pioneer. Maron was undeniably an early adopter of the technology, of course. And in June 2015, he became the first podcaster to [interview a sitting president](https://www.wtfpod.com/podcast/episodes/episode_613_-_president_barack_obama), a colossal milestone for the medium itself.  
 
-K Wave Media, a Korean entertainment firm listed on the NASDAQ, has seen its stock soar 143% after announcing plans to allocate a significant portion of its $500 million raise towards building a Bitcoin treasury and investing in related initiatives.* The company aims to leverage Bitcoin as a store of value and a foundation for innovation, joining a growing number of companies imitating a Bitcoin-focused corporate strategy. ([Decrypt](https://decrypt.co/323671/k-pop-firms-stock-soars-115-after-bitcoin-purchase-plans)) | **K-Pop Media Firm K Wave Sees Stock Surge After Announcing Bitcoin Acquisition Strategy** K Wave Media, a Nasdaq-listed K-Pop media holding company, has seen its stock surge 132.39% after announcing plans to sell $500 million worth of shares to finance its Bitcoin purchases and other corporate operations. The move follows a growing trend of firms holding Bitcoin as a strategic reserve asset, with K Wave claiming to be among the first publicly traded media companies to integrate BTC directly into its core treasury operations. https://www.theblock.co/post/357032/nasdaq-listed-k-pop-media-firm-k-wave-stock-rallies-130-after-announcing-bitcoin-acquisition-strategy ([]())
+McFarland also notes how the warmth and humanity Maron has consistently brought to WTF throughout its run have proved to be a sad exception as podcasting has exploded in popularity over the years. She writes:
 
- <hr>
+>*Maron’s production output has been daunting since the earliest days of “WTF,” churning out two episodes a week to build an archive surpassing 1,600 installments. (Monday’s episode is No. 1,648.) All these years later, and with a constellation’s worth of additional competition, it’s still one of the most downloaded and streamed podcasts going.*
+>
+>*But it’s also a small island in a medium overrun by shallow rage theater celebrating thoughtlessness. Within that swirl, “WTF” stands out as an oasis of introspection thanks to Maron presenting his show as an open cavern of feeling, constantly exposing new corners of insight and inviting listeners inside to revel in those discoveries.*
 
- [![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)](
- https://dribbble.com/roobinium)
+<hr>
 
- <hr>
+[![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)](
+https://dribbble.com/roobinium)
+
+<hr>
+
+At this point, Maron has well earned a break, which he says he sorely needs from the production grind. But I do hope *someone* keeps making media like WTF on the internet. Stuff that's kind and thoughtful and not so "twitchy," to borrow a favorite phrase of my old newspaper colleague Kara Swisher, now a hugely popular [podcaster](https://podcasts.voxmedia.com/show/pivot) in her own right.
+
+To the extent we're all content creators on social networks these days, maybe each of us could even take on a small piece of the task from here. Make the internet just a little bit kinder as a place everyday, one post at a time.
+
+Boomer lives!
+
 
 ### Five Things: June 1-7, 2025
 
@@ -103,27 +116,6 @@ K Wave Media, a Korean entertainment firm listed on the NASDAQ, has seen its sto
 - **Sen. Cynthia Lummis (R-Wyo.)** said in an [interview with Bloomberg News](https://www.youtube.com/watch?v=iEHfVY3S9F4&t=91s) on Tuesday she expects a bill setting clearer rules for stablecoins in the U.S. will pass the Senate this week and head to the House. Politico's Jasper Goodman reports Lummis is [coordinating with](https://www.politico.com/live-updates/2025/06/03/congress/senate-crypto-stablecoins-legislation-market-republicans-00383565) Sen. Kirsten Gillibrand (D-N.Y.) in an effort to secure some level of bipartisan support that would smooth the bill's passage into law. Lummis says that will likely preclude allowing interest-bearing stablecoin accounts in the Senate bill.
 
 - **Brutal, low-tech "wrench attacks"** against wealthy crypto investors appear to be on the rise globally, including recent arrests in high-profile cases in [New York](https://abcnews.go.com/US/wireStory/wrench-attacks-wealthy-crypto-holders-rise-122270144) and [Morocco](https://decrypt.co/323693/police-arrest-alleged-amstermind-french-crypto-kidnappings-report). Slate's Nitish Pahwa [reports](https://slate.com/technology/2025/06/crypto-news-wrench-attacks-nyc-kidnapping-crime-rise.html) that the problem even warranted a panel presentation at the recent Bitcoin Las Vegas conference. Yikes.
-
-### Odds & Ends
-
-![Marc Maron interviewing President Obama for his podcast in June 2015](https://w3w.news/img/marc-maron-obama.jpg)
-*Marc Maron interviewing President Obama for his podcast in June 2015. White House photo by Pete Souza*
-
-**Comedian Marc Maron** announced on [Monday's episode](https://www.wtfpod.com/podcast/episode-1648-john-mulaney) of his podcast WTF that he and producer Brendan McDonald will end the 16-year project this fall.
-
-In Salon's coverage of the announcement, senior cultural critic Melanie McFarland accurately [captured](https://www.salon.com/2025/06/04/marc-marons-heart-made-wtf-a-hit-in-the-joe-rogan-age-its-all-about-shallow-brawn/) Maron's historical significance as a podcasting pioneer. Maron was undeniably an early adopter of the technology, of course. And in June 2015, he became the first podcaster to [interview a sitting president](https://www.wtfpod.com/podcast/episodes/episode_613_-_president_barack_obama), a colossal milestone for the medium itself.  
-
-McFarland also notes how the warmth and humanity Maron has consistently brought to WTF throughout its run have proved to be a sad exception as podcasting has exploded in popularity over the years. She writes:
-
->*Maron’s production output has been daunting since the earliest days of “WTF,” churning out two episodes a week to build an archive surpassing 1,600 installments. (Monday’s episode is No. 1,648.) All these years later, and with a constellation’s worth of additional competition, it’s still one of the most downloaded and streamed podcasts going.*
->
->*But it’s also a small island in a medium overrun by shallow rage theater celebrating thoughtlessness. Within that swirl, “WTF” stands out as an oasis of introspection thanks to Maron presenting his show as an open cavern of feeling, constantly exposing new corners of insight and inviting listeners inside to revel in those discoveries.*
-
-At this point, Maron has well earned a break, which he says he sorely needs from the production grind. But I do hope *someone* keeps making media like WTF on the internet. Stuff that's kind and thoughtful and not so "twitchy," to borrow a favorite phrase of my old newspaper colleague Kara Swisher, now a hugely popular [podcaster](https://podcasts.voxmedia.com/show/pivot) in her own right.
-
-To the extent we're all content creators on social networks these days, maybe each of us could even take on a small piece of the task from here. Make the internet just a little bit kinder as a place everyday, one post at a time.
-
-Boomer lives!
 
 _**Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
