Adding final head + subhead, with help from Copilot

--- a/2025/2025-06-08-wir.md
+++ b/2025/2025-06-08-wir.md
@@ -1,5 +1,5 @@
-# TKTK
-## TKTTK
+# The end of an era in podcasting
+## Marc Maron’s empathy and introspection set WTF apart in an era of rage theater.
 
 <hr>
 
