--- a/2025/2025-06-08-wir.md
+++ b/2025/2025-06-08-wir.md
@@ -35,7 +35,7 @@ At this point, Maron has well earned a break, which he says he sorely needs from
 
 To the extent we're all content creators on social networks these days, maybe each of us could even take on a small piece of the task from here. Make the internet just a little bit kinder as a place everyday, one post at a time.
 
-Boomer lives!
+[Boomer lives!](https://en.wikipedia.org/wiki/WTF_with_Marc_Maron)
 
 
 ### Five Things: June 1-7, 2025
