Early, early draft for 15 June

--- a/2025/2025-06-08-wir.md
+++ b/2025/2025-06-08-wir.md
@@ -1,4 +1,4 @@
-# The end of an era in podcasting
+5# The end of an era in podcasting
 ## Marc Maron’s empathy and introspection set WTF apart in an era of rage theater.
 
 <hr>
