Adding links to more news articles

--- a/2025/2025-06-15-wir.md
+++ b/2025/2025-06-15-wir.md
@@ -14,7 +14,17 @@
 
 <hr>
 
-**Call me Ishmael.** Yadda yadda yadda. <!-- Lead item goes here... -->
+Jesus Rodriguez, CEO of the institutional DeFi platform IntoTheBlock, just sounded an important alarm. In [an essay](https://news.google.com/read/CBMif0FVX3lxTE9LVm9rbkFKWGRIYnlLcUZiWlNqdWZUYWFVbXRhaWlQZC1taEpRNlJ4bjRWUHZ2UkNqUXJpa2VYZ2tabF9nc1FNX1pBMmxNVEpyQmhkenotbmFsOHlnS1lOX0JKRzZnbVc3R2lPdnJVak1Za2pheWg3UUFWYVZnM0U?hl=en-US&gl=US&ceid=US%3Aen) for CoinDesk, he writes:
+
+>*"AI innovation is compounding rapidly, and Web3 has been a passive observer. None of the major AI milestones—unsupervised pretraining, advanced fine-tuning, retrieval-augmented generation, reasoning engines, or agentic frameworks—have involved Web3 architectures in a meaningful way.*
+>
+>*"As each new release compounds on the last, the barriers to catching up become steeper. All critical tooling, platforms, and infrastructure for building frontier models are currently centralized. Without urgent, coordinated efforts to change this trajectory, Web3-AI will be left decades behind in a field that advances in months."*
+
+
+a platform focused on enabling market intelligence and institutional DeFi solutions for crypto markets.
+
+
+He is also the co-founder and President of Faktory, a generative AI platform for business and consumer apps. Jesus also founded The Sequence, one of the most popular AI newsletters in the world. In addition to his operational work, Jesus is a guest lecturer at Columbia University and Wharton Business School and is a very active writer and speaker.
 
  <hr>
 
@@ -27,15 +37,34 @@
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
+- SharpLink Gaming buys a big chunk o' ETH, is now the number-two holder behind the Ethereum Foundation. https://www.theblock.co/post/357998/sharplink-gaming-buys-463-million-in-eth-becomes-no-2-holder-after-ethereum-foundation
+
+- Walmart and Amazon are exploring issuance of their own stablecoins. https://www.wsj.com/finance/banking/walmart-amazon-stablecoin-07de2fdd?st=5E2Fxd&reflink=desktopwebshare_permalink
+
+- Senate advances GENIUS Act. https://www.cnbc.com/2025/06/13/what-the-genius-act-could-mean-for-crypto-and-other-investors.html
+
 - Midjourney/Disney suit <!-- Link TK -->
 
-- Big Meta acquisition <!-- Link TK -->
+- **Acquisitions:** Big Meta acquisition https://www.theverge.com/news/684322/meta-scale-ai-15-billion-investment-zuckerberg | Stripe acquires Privy -- https://news.google.com/read/CBMiwwFBVV95cUxOZzB6Y3BDeGRVcDR6bExRNW9iVkxKSXAwZ0QwcUF0VDB4eVFJQnE3dlF5UmFJUFFpOFFxbGcyaFFYMHdFX0NsaWZSNEdZc3BnUkx6bzMyRkczMlJsenNkOFpuc0ZLMDJiTVkxcGlPYnBqdTlPQVpvLW5DQXd5RDVVck9nUkZZa3NaXzVyNG16TC1LN1BpSWc0VEhxaXVJUEo5RmNfclNFNHN6aXhZcFJKMFRxNEd5eFdIMnpkNVFmdFFwTUk?hl=en-US&gl=US&ceid=US%3Aen |
 
-- Uphold exploring an IPO: https://www.theblock.co/post/357653/the-daily-uphold-explores-ipo-after-circle-success-guggenheim-taps-xrp-ledger-in-rwa-push-and-more
+- Coinbase sees bullish crypoto outlook for 2025: https://www.theblock.co/post/358077/coinbase-report-corporate-bitcoin
 
-- TK https://observer.com/2025/06/yoshua-bengio-nonprofit-counter-agentic-ai/
+- Listed BTC funds hit $1T in trading volume in 18 months: https://www.theblock.co/post/357609/us-spot-bitcoin-etfs-set-to-hit-1-trillion-usd-cumulative-trading-volume
 
-- TK
+- Guggenheim using XRP for tokenized RWA: https://www.theblock.co/post/357636/guggenheim-taps-ripples-xrp-ledger-to-offer-tokenized-commercial-paper-in-rwa-push-report
+
+- 75% of users use chatbots for emotional support: https://decrypt.co/324466/majority-users-turn-ai-emotional-advice-study
+
+<!--
+
+Other candidates/links:
+
+- AI nonprofit: https://observer.com/2025/06/yoshua-bengio-nonprofit-counter-agentic-ai/
+-
+-
+-
+
+-->
 
 ### Market Snapshot
 
@@ -96,14 +125,25 @@
 
 ### Looking Ahead
 
-- tk
-- tk
+- CoinDesk Opinion: Crypto is losing the race to AI: https://www.coindesk.com/opinion/2025/06/10/why-is-web3-losing-the-ai-race
+
+- CoinDesk Opinion: Don't let the cult of price hold back crypto: https://www.coindesk.com/opinion/2025/06/10/dont-let-the-cult-of-price-hold-crypto-back
+
+- There is a good chance crypto is "spreading" in your retirement account. https://news.google.com/read/CBMimgFBVV95cUxNR3l3eWktbWd2bTMwY1ZueDl3b1RISDdZakF4RzhzWHV0WUVQbVo1a05wVnI3MXVYdExPSHVENy0yd2VUazJ5MVNYem50aGZrY3Flalc4WDljcWR5ZzJTMFd2SXhyU3pYYklfQS1mRnZDMnY0Zkd0dENwSjMwaG5XNzR4ZU5FeF9HSFJ2UVhQT2JDRmhyZ1JlWC1B?hl=en-US&gl=US&ceid=US%3Aen
+
+- Uphold exploring an IPO: https://www.theblock.co/post/357653/the-daily-uphold-explores-ipo-after-circle-success-guggenheim-taps-xrp-ledger-in-rwa-push-and-more
+
+- Coinbase study says 60% of Fortune 500 working on blockchain projects: https://www.theblock.co/post/357522/60-of-fortune-500-companies-reportedly-working-on-blockchain-initiatives-coinbase | https://decrypt.co/324508/blockchain-use-soaring-fortune-500-smaller-firms-coinbase
+
 - Prof G/Pat McGee on iPhone in the U.S.
 
 ### Odds & Ends
 
-- tk
-- tk
+- tristan thompson turned down 32B in BTC: https://www.youtube.com/watch?v=Bg4yErvSHfE
+
+- Salon writer refuses to surrender her beloved em dash: https://www.salon.com/2025/06/11/ai-cant-have-my-em-dash/
+
+- https://gothamist.com/news/nyc-lawmaker-wants-to-legalize-bodega-cats-in-the-5-boroughs
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
